<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="10dp">

            <TextView
                android:id="@+id/varifiynumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/otp"
                android:textAlignment="center"
                android:textColor="#000"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:padding="10dp">

            <TextView
                android:id="@+id/otpnotification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/otp1"
                android:textAlignment="center"
                android:textColor="#5A5A5A"
                android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="10dp">

            <TextView
                android:id="@+id/numberphn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="+8801629668325"
                android:textColor="#5CF133"
                android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal"
            android:padding="5dp">

            <EditText
                android:id="@+id/code1"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/editext_round_otp"
                android:text="1"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/code2"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="5dp"
                android:background="@drawable/editext_round_otp"
                android:text="1"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/code3"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="5dp"
                android:background="@drawable/editext_round_otp"
                android:text="1"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/code4"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="5dp"
                android:background="@drawable/editext_round_otp"
                android:text="1"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/code5"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="5dp"
                android:background="@drawable/editext_round_otp"
                android:text="1"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/code6"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="5dp"
                android:background="@drawable/editext_round_otp"
                android:text="1"
                android:textAlignment="center" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:padding="10dp">

            <TextView
                android:id="@+id/resendtext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/otp2"
                android:textAlignment="center"
                android:textColor="#9870E2"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp">

            <Button
                android:id="@+id/continuebtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:background="#5CF133"
                android:text="Continue" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp">

            <TextView
                android:clickable="true"
                android:id="@+id/otpnotget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/otp3"
                android:textColor="#000" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>